# splash

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build.yaml
example/: Makefile  README.md
example/source/: main.cpp
include/splash/: Bitmap.hpp  Colour.hpp  ColourCutQuantizer.hpp  ColourUtils.hpp  MediaStyle.hpp  Palette.hpp  Splash.hpp  Swatch.hpp  Utils.hpp
include/splash/filter/: BlackWhite.hpp  Default.hpp  Filter.hpp  Hue.hpp
source/: Bitmap.cpp  Colour.cpp  ColourCutQuantizer.cpp  ColourUtils.cpp  MediaStyle.cpp  Palette.cpp  Swatch.cpp  Utils.cpp
source/filter/: BlackWhite.cpp  Default.cpp  Filter.cpp  Hue.cpp
tests/: Bitmap.cpp  Colour.cpp  test.cpp
tests/source/: TestBitmap.cpp  TestColour.cpp  main.cpp
